Update env file

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # PORT = 8000
-# DATABASE-URL = mongodb://127.0.0.1:27017
+# DATABASE_URL = mongodb://127.0.0.1:27017
 
 
-MONGO_DB_URI = mongodb+srv://abdulazeem3802:<Abdul12>@cluster0.cmghiko.mongodb.net/Rest-Api?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_URL = mongodb+srv://abdulazeem3802:<Abdul12>@cluster0.cmghiko.mongodb.net/Rest-Api?retryWrites=true&w=majority&appName=Cluster0
