--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 # DATABASE_URL = mongodb://127.0.0.1:27017
 
 
-DATABASE_URL = mongodb+srv://abdulazeem3802:<Abdul12>@cluster0.cmghiko.mongodb.net/Rest-Api?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_URL = mongodb+srv://abdulazeem3802:<db_password>@rest-api.zs2zb.mongodb.net/?retryWrites=true&w=majority&appName=Rest-Api
