Update env file

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 # DATABASE_URL = mongodb://127.0.0.1:27017
 
 
-DATABASE_URL = mongodb+srv://abdulazeem3802:<Azeem12>@rest-api.zs2zb.mongodb.net/Rest-Api?retryWrites=true&w=majority&appName=Rest-Api
+DATABASE_URL = mongodb+srv://abdulazeem3802:Azeem12@rest-api.zs2zb.mongodb.net/Rest-Api?retryWrites=true&w=majority&appName=Rest-Api
